Removed warnings and allowed reading from settigns file

--- a/C++/Makefile
+++ b/C++/Makefile
@@ -1,4 +1,6 @@
 main:
-	g++ -o Pircbot main.cpp Pircbot.cpp 
+	g++ -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp 
+debug:
+	g++ -g -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp 
 clean:
-	rm -f Pircbot
+	rm -f bin/Pircbot
