separated the loading of settings into Settings.cpp(also, now begining to use strings instead of char arrays)

--- a/C++/Makefile
+++ b/C++/Makefile
@@ -1,6 +1,6 @@
 main:
-	g++ -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp 
+	g++ -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp src/Settings.cpp
 debug:
-	g++ -g -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp 
+	g++ -g -Wall -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp src/Settings.cpp
 clean:
 	rm -f bin/Pircbot
