made the makefile make a bin folder

--- a/C++/Makefile
+++ b/C++/Makefile
@@ -1,4 +1,5 @@
 main:
+	mkdir -p bin
 	g++ -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp src/Settings.cpp
 debug:
 	g++ -g -Wall -o bin/Pircbot -I include src/main.cpp src/Pircbot.cpp src/Settings.cpp
